[package]
name = "boync_anchor_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "boync_anchor_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = {version = "0.25.0", features = ["init-if-needed"]}
anchor-spl = "0.25.0"
spl-associated-token-account = "1.0.5"
