[package]
name = "boync_anchor_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "boync_anchor_program"

[features]
no-entrypoint = []
test-bpf = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
borsh = "0.9.2"
num-traits = "0.2"
anchor-lang = { version="0.27.0", features=["init-if-needed"]}
anchor-spl = "0.27.0"
getrandom = { version = "0.2.9", features = ["custom"] }
solana-program = "=1.14.17"
winnow = "=0.4.1"
toml_datetime = "=0.6.1"
spl-token = { version = "3.5",  features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.11", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }
mpl-token-auth-rules = { version = "1.1", features = ["no-entrypoint"] }

[dev-dependencies]
solana-sdk = "1.14"
solana-program-test = "1.14"
anchor-client = "0.27.0"